components/Slideshow.module.css
  .slideshow, .slideshow_fullscreen {
    position: relative;
    display: inline-block;
    text-align:center;
    margin: 20px;
    padding: 20px;
    border: 1px solid lightgray;
  }

  .slideshow img, .slideshow_fullscreen img {
      max-width: 80vw;
      max-height: 80vh;
      border-radius: 50px;
  }

  .image_holder {
    position: relative;
  }

.slideshow_fullscreen, .hires_image{
    position: fixed;
    top: 0;
    left: 0;
    margin: 0;
    width: 100vw;
    height: 100vh;
    text-align: center;
    padding-top: 20px;
    background-color: gray;
    overflow: auto;
    text-align: center;
}

.hires_image img {
  position: absolute;
}

.hires_image div {
  position: fixed;
  top: 0;
  right: 0;
  font-size: 18pt;
  border: 1px solid black;
  background-color: white;
  cursor: pointer;
  padding:5px;
}

.slideshow_fullscreen .below_image {
  display: inline-block;
  width: fit-content;
  padding: 10px;
  background-color: lightgray;
  border-radius: 25px;
}

.vcr_controls {
  width: fit-content;
  display: inline-block;

}
  .vcr_controls button {
    font-size:18pt;
    margin: 0px;
    padding: 5px;
    border: none;
    background-color: transparent;
    cursor: pointer;
  }

  .vcr_controls button:active {
    transform: translate(3px,3px);
  } 

  .datetime {
    font-family: 'Courier New', Courier, monospace;
    white-space: pre;
  }

  .touchBar {
    display: inline-block;
    max-width: 410px;
    word-break: break-all;
    font-size: 10pt;
    cursor: pointer;
    height: min-content;
    width: max-content;
    margin-top:5px;
  }

  .touchBarCell {
    font-size: 10pt;
  }

  .touchBarCell::selection {
    background: white;
  }

  .hourSelect {
    font-size: 10pt;
    font-weight: 100;
  }

  .serial {
    font-size: 20pt;
    font-weight: 500;
  }

.countdown {
    position:absolute;
    right: 50px;
    bottom: 30px; 
    font-size:20pt;
    font-family: sans-serif;
    color: #EEFFBB;
}

.preloaded_image img {
  position: absolute;
  bottom: 10px;
  right: 20px;
  width: 100px;
  height: 76px;
  border-radius: 10px;

}

.timelapse_metadata {
  font-size:9pt;
}

.no_photos {
  width: 100%;
  font-size: 20pt;
  text-align: center;
  padding-top:200px;
  padding-left: 100px;
  color: gray;
}

.thumbnails {
  float: left;
  width: 120px;
  padding: 10px;
  font-size: 8pt;
  font-style: italic;
}

.thumbnails img {
  border-radius: 10px;
  width: 100%;
}

.addToSlack {
  height: 30px;
  cursor: pointer;
  border-radius: 0 !important;
  border: 0;
}

.post_to_slack {
  width: 500px;
  padding: 20px;
  font-size: 10pt;
  text-align: left;
}

.post_to_slack textarea {
  margin-top: 0px;
}

.slack_button_active, .slack_button_inactive {
  margin-top: 30px;
  background-image: url('/addToSlack.png');
  height: 30px;
  width: 151px;

}

.slack_button_active {
  background-color: #2F9CFF;
  color: white;
  cursor: pointer;
  border: 1px solid lightgray;
}

.slack_button_inactive {
  background-color: #EEEEEE;
  color: black;
  cursor: default;
  border: 0;
}

.fullscreen_icon {
  position:relative; 
  display:inline-block;
}

.fullscreen_icon_arrow {
  position:absolute; 
  top:0;
}

.slack_form {
  vertical-align: bottom;
}

.slack_form div {
  font-size:20pt;
  color: red;
}

